# groq_whisper_gui

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
scripts/: build.sh  run-debug.sh  smoke-api.sh  smoke-encode.sh
src/: app.rs  audio.rs  config.rs  encoder.rs  fixture.rs  hotkey.rs  main.rs  persistence.rs  transcriber.rs  ui.rs  usage.rs
tests/: help_output.rs
