[package]
name = "groq-whisper-desktop"
version = "0.1.0"
edition = "2021"
description = "Standalone push-to-transcribe desktop app for Groq Whisper API"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.15"
crossbeam-channel = "0.5"
directories = "5.0"
eframe = "0.27"
hound = "3.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
